@@ -1,12 +1,14 @@
 /*! \file  fasp_functs.h
  *
  *  \brief Function decoration for the FASP package
+ *
+ *---------------------------------------------------------------------------------
+ *  Copyright (C) 2008--2017 by the FASP team. All rights reserved.                
+ *  Released under the terms of the GNU Lesser General Public License 3.0 or later.
+ *---------------------------------------------------------------------------------
+ *
+ *  \warning DO NOT EDIT!!! This file is automatically generated!
  */ 
-
-/*******************************************************************/  
-/* WARNING: DO NOT EDIT THIS FILE!!!                               */  
-/* This header file is automatically generated with "make headers" */
-/*******************************************************************/
 
 #include "fasp.h" 
 #include "fasp_block.h" 
@@ -2411,7 +2413,7 @@ void fasp_ilu_data_create (const INT   iwk,
 
 void fasp_ilu_data_free (ILU_data *ILUdata);
 
-void fasp_swz_data_free (SWZ_data *Schwarz);
+void fasp_swz_data_free (SWZ_data *swzdata);
 
 
 /*-------- In file: PreMGCycle.c --------*/
