@@ -11,17 +11,22 @@
 # modified by Chensong Zhang to fix the CPP bug in VC++ ( 12/13/2011 )
 # modified by Chensong Zhang to fix CPP compatibility problem (06/08/2014 )
 # modified by Chensong Zhang to add fasp_grid.h ( 01/28/2017 )
+# modified by Chensong Zhang to update output format ( 01/31/2017 )
 
 BEGIN {
   inheader=0;
   print "/*! \\file  " name
   print " *"
   print " *  \\brief Function decoration for the FASP package"
+  print " *"
+  print " *---------------------------------------------------------------------------------"
+  print " *  Copyright (C) 2008--2017 by the FASP team. All rights reserved.                "
+  print " *  Released under the terms of the GNU Lesser General Public License 3.0 or later."
+  print " *---------------------------------------------------------------------------------"
+  print " *"
+  print " *  \\warning DO NOT EDIT!!! This file is automatically generated!"
   print " */ \n"
-  print "/*******************************************************************/  "
-  print "/* WARNING: DO NOT EDIT THIS FILE!!!                               */  "
-  print "/* This header file is automatically generated with \"make headers\" */" 
-  print "/*******************************************************************/\n"
+
   print "#include \"fasp.h\" "
   print "#include \"fasp_block.h\" "
   print "#include \"fasp_grid.h\" "
