@@ -8,16 +8,22 @@
 # modified by Xiaozhe Hu for BSR format ( 10/26/2010 )
 # modified by Chensong Zhang for the new format ( 03/03/2011 )
 # modified by Xiaozhe Hu for CUDA ( 09/20/2011 )
+# modified by Chensong Zhang to update output format ( 01/31/2017 )
 
 BEGIN {
   inheader=0;
-  print "/*******************************************************************/  "
-  print "/* WARNING: DO NOT EDIT THIS FILE!!!                               */  "
-  print "/* This header file is automatically generated with \"make headers\" */" 
-  print "/*******************************************************************/\n"
-  print "/*! \\file " name
-  print " *  \\brief Function decroration for the FASP package"
+  print "/*! \\file  " name
+  print " *"
+  print " *  \\brief Function decoration for the FASP package"
+  print " *"
+  print " *---------------------------------------------------------------------------------"
+  print " *  Copyright (C) 2008--2017 by the FASP team. All rights reserved.                "
+  print " *  Released under the terms of the GNU Lesser General Public License 3.0 or later."
+  print " *---------------------------------------------------------------------------------"
+  print " *"
+  print " *  \\warning DO NOT EDIT!!! This file is automatically generated!"
   print " */ \n"
+
   print "#include \"fasp.h\" "
   print "#include \"fasp_block.h\" "
   print "#include \"fasp4cuda.h\" "
