@@ -3,6 +3,8 @@ File Name: CHANGES
 01/31/2017 FASP 1.9.7:
 - Clean up *.inl files.
 - Fix more warnings by xcode; some still left: unused functions, doxygen.
+- Change header file auto-generator output.
+- Clean up TCL installation script. 
 
 01/30/2017 FASP 1.9.6:
 - Modify fasp.h (affect all FASP projects).
